services_and_networking/Network Polices/networkpolicy-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: api-pod
        namespaceSelector:
          matchLabels:
            name: dev
      - ipBlock:
          cidr: 192.168.1.10/32
      ports:
        - protocol: TCP
          port: 3306
